# MARGE

./: .env.example  .gitignore  CLAUDE.md  NOTES.md  README.md  architecture.md  overview.md  pyproject.toml
apps/orchestrator/: agent.py  mcp_discovery.py  system_prompt.md  system_prompt.pre_advice_flow_backup.md
apps/orchestrator/middleware/: enforce_protocol.py
apps/orchestrator/requirements/: marge_protocol.py
apps/orchestrator/tools/: _adapter.py  abstain.py  ask_user_back.py  clinical_report.py  consult_expert.py  final_report.py  patient_history.py  request_more_info.py  update_user.py
apps/streamlit_ui/: app.py
docs/traces/: demo_trace_v8.json  demo_trace_v8.md
scripts/: capture_trace.py  diag_agent.py  diag_agent_tooluse.py  diag_nim_capture.py  orchestrator_smoke.py  smoke_test.py
services/medical_expert_agent/: agent.py  system_prompt.md
services/medical_expert_agent/tools/: _adapter.py  search_web.py
services/ml_mcp_server/: registry.py  server.py
services/ml_mcp_server/explainers/: shap_wrapper.py
services/ml_mcp_server/models/: Hypertension_xgb.py  _agent_factory.py  _base.py  _csv_demo_xgb.py  _csv_to_agent.py  breast_cancer_xgb.py  dengue_xgb.py  diabetes_catboost.py  diabetes_xgb.py  heart_disease_xgb.py  heart_failure_xgb.py  liver_disease_xgb.py  sepsis_xgb.py  standard_feature_names.md  stroke_xgb.py  synthetic_mortality_xgb.py  type2_diabetes_xgb.py
services/patient_data_mcp_server/sources/: csv_ingest.py
tests/e2e/: conftest.py  test_mcp_server_e2e.py  test_ml_pipeline_e2e.py  test_streamlit_playwright.py  test_ui_logic_e2e.py
tests/integration/: test_mcp_discovery.py  test_orchestrator_agent_factory.py  test_orchestrator_protocol_flow.py
tests/unit/: test_enforce_protocol.py  test_llm_provider.py  test_marge_requirement.py  test_orchestrator_bundle.py  test_orchestrator_tools.py  test_search_web_tool.py  test_stub_expert.py  test_tool_adapter.py  test_tool_schemas.py
